package v1

import (
	"Comagic/pb"
	"context"
)

func (s Server) GetCampaigns(context.Context, *pb.GetCampaignsRequest) (*pb.GetCampaignsResponse, error) {
	return nil, nil
}

func (s Server) GetCampaignsConditions(context.Context, *pb.GetCampaignsConditionsRequest) (*pb.GetCampaignsConditionsResponse, error) {
	return nil, nil
}
